<resources>
    <string name="app_name">Ice-A-GeOPhone</string>

    <!-- Chaînes utilisées pour les écrans de la barre de navigation !-->

    <!-- Navigation -->
    <string name="home_screen">Ice-A-GeOPhone</string>
    <string name="contact_screen">Contact</string>
    <string name="locate_screen">Locate</string>
    <string name="secure_screen">Secure</string>
    <string name="scan_screen">Scan</string>
    <string name="history_screen">History</string>
    <string name="settings_screen">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Home screen -->
    <string name="send_sms">Send SMS</string>
    <string name="phone_number">Phone number</string>
    <string name="sms_body">SMS body</string>

    <string name="latitude">Latitude: %1$f</string>
    <string name="longitude">Longitude: %1$f</string>
    <string name="altitude">Altitude: %1$f</string>

    <!-- Locate screen -->
    <string name="request_location_gps">Request GPS location</string>
    <string name="request_location_geomagnetic">Request geomagnetic location</string>

    <!-- Contact screen -->
    <string name="vibrate">Vibrate</string>
    <string name="vibrate_hint">Forces the target phone to vibrate. Go to the Settings Menu to setup Target phone\'s number and password.</string>
    <string name="ring">Ring</string>
    <string name="ring_hint">Forces the target phone to ring at maximum volume. Go to the Settings Menu to setup Target phone\'s number and password.</string>
    <string name="send_instructions">Send instructions</string>
    <string name="send_instructions_hint">Opens an Alert screen on target phone and displays instructions to give your phone back.</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>
    <string name="string_desc_bck">Background showing Scrat holding a nut</string>

    <!-- History screen -->
    <string name="action_search">Search</string>

    <!-- Alert -->
    <string name="no_file">Nothing to delete</string>
    <string name="no_file_message">There are no records to delete !</string>
    <string name="missing_data">Missing compulsory data</string>
    <string name="missing_data_message">Cannot send SMS without number and content !</string>

    <!-- Hints -->
    <string name="hint">Search records ...</string>

    <!-- Settings -->
    <string name="set_uimode">Change UI appearance</string>
    <string name="set_pwd">Change your local password</string>
    <string name="set_target">Change the target phone number</string>
    <string name="set_mode">Enable/Disable the app</string>
    <string name="enter_new_password">Set New Password To</string>
    <string name="application_status">Application status</string>
    <string name="enter_old_password">Enter password to confirm</string>
    <string name="target_phone_number">Target Phone Number</string>
    <string name="target_phone_password">Target Phone Password</string>

    <!-- Home TextViews -->
    <string name="telephone">Target Phone Number</string>
    <string name="lastlatitude">Last Known Latitude</string>
    <string name="lastlongitude">Last Known Longitude</string>
    <string name="lastaltitude">Last Known Altitude</string>
    <string name="not_found_yet">Not found yet</string>
    <string name="not_set_settings">Not set (@Settings)</string>
    <string name="hintInstructions">Enter your instructions here then click Send Instructions. If your phone has been stolen, do not provide any personal information.</string>
    <string name="remoteLock">Remote Lock</string>
    <string name="lockText">Locks the target device\'s screen. If you want to display a message on the locked screen, consider using Send Instructions instead.</string>
    <string name="more_options">More options</string>
    <string name="admin_rights">Give Local Admin Privileges</string>
    <string name="explanation">CAUTION : if you give the admin rights, your phone will be remotely lockable. That could be useful in case of robbery.</string>
    <string name="removeadmin">Remove Local Admin Rights</string>
    <string name="disableexplanation">This will remove the local admin rights. Press this if you encounter trouble uninstalling the app, or don\'t want your phone to be remotely lockable.</string>
    <string name="important">IMPORTANT</string>

</resources>
