<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_secure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.ece.iceageophone.main.activity.SecureActivity"
    tools:showIn="@layout/secure_app_bar">

    <Button
        android:text="@string/remoteLock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/iceagegradcenter"
        android:id="@+id/BtnRmtLock"
        android:layout_marginTop="134dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/lockText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TVLock"
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/BtnRmtLock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/explanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TVexplanation"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/BtnAdminRights"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/admin_rights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_marginTop="74dp"
        android:id="@+id/BtnAdminRights"
        android:layout_below="@+id/TVLock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/wallet_bright_foreground_holo_dark" />

    <Button
        android:text="@string/removeadmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/iceagegradcenter"
        android:id="@+id/BtnDisableAdmin"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/TVexplanation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/disableexplanation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TVDisableAdmin"
        android:textAlignment="center"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/BtnDisableAdmin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/target_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TVLock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_marginBottom="69dp"
        android:id="@+id/TVphone"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:text="@string/not_set_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/TVphone"
        android:layout_toRightOf="@+id/TVphone"
        android:layout_toEndOf="@+id/TVphone"
        android:layout_marginLeft="19dp"
        android:layout_marginStart="19dp"
        android:id="@+id/TVnumber"
        android:textColor="@color/colorAccent" />

</RelativeLayout>